--- a/gb/nf3046_7.md
+++ b/gb/nf3046_7.md
@@ -4,6 +4,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/20/n11057397.md#1" target="_blank">【视频】3亿多中国人觉醒 退出中共相关组织</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/20/n11057397.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/300_MILLION_QUIT_CCP_HONG_KONG_PARADE-150x120.jpg" align ="left"></a>中共建政近70年，8,000多万中国人死于非命；2004年大纪元发表系列社论《九评共产党》，系统揭示了中共的真实历史与邪恶流氓本质，令海内外华人震惊，引发波澜壮阔的三退（退党、退团、退队）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月28日 4:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/25/n11070131.md#1" target="_blank">高雄瑞丰夜市 大陆游客明真相喜三退</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/25/n11070131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/2019-2-22-gaoxiong-night-fair_01-150x120.jpg" align ="left"></a>每当夜幕降临，以台湾小吃闻名的高雄瑞丰夜市就吸引着远近游客前来品尝。在通往瑞丰夜市美食区过道上，法轮功学员建立的“真相长廊”和“三退”服务点（退出中共党、团、队组织），也吸引了不少台湾民众和大陆游客驻足关注和了解真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月27日 12:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/24/n11067872.md#1" target="_blank">台北故宫前 大陆游客们的感动</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/24/n11067872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/2019-2-23-taiwan-national-palace-museum_04-1-150x120.jpg" align ="left"></a>自2008年7月台北故宫对中国游客开放以来，就成了他们到访的热门景点之一。那儿有一道独特的真相展板风景线，年复一年，日复一日，向大陆游客展示着被中共封锁的法轮功真相。了解真相的人，纷纷“三退”（退出中共的党、团、队）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月26日 6:39 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/3/7/n11095039.md#1" target="_blank">参考资料：纵观天下（2019年3月传单/传真）</a><br></h3>游故宫闻真相 合家三退喜洋洋 莫谈国事的背后 退党声明 心脏病专家绝处逢生的故事 自由派人物去世 家属反对盖党旗 三言两语话爱国......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月07日 12:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/3/7/n11094672.md#1" target="_blank">每日三退声明精选（2019/03/06）</a><br></h3>灵、丽丽皆辛苦、筠、华春四人为父母子女，均在中共医院、乡镇卫生院工作，虽做自己的分内事，但总觉得与周边环境格格不入（收受红包等），以前总觉得是自己的问题，不能融入社会。有幸翻墙后，才了解中共的本质，全是假大空。现四人宣誓退出中共党团队，愿中华大地生生不息，愿华夏民族越来越好，愿天灭中共。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月07日 10:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/3/6/n11092172.md#1" target="_blank">每日三退声明精选（2019/03/05）</a><br></h3>本人声明退出共青团和少先队，他们用贪腐败坏了国人，让国人一切朝钱看，改变了传统中国人几千年的文化，至人民于水深火热之中而不顾。在此我声明退出共青团和少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月06日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/3/4/n11087117.md#1" target="_blank">每日三退声明精选（2019/03/03）</a><br></h3>我叫李州贤，来自广东汕尾，现在深圳打工，我在深圳打工期间，见识到了共产党利用房地产泡沫榨干中国人的血汗钱，六个钱包也不够买一套房，并且在中国大陆是非洲工资，迪拜物价，欧洲税收，非洲福利。这些年我深深的看到了中国的黑暗社会，共产党统治区一般黑暗，对此我对中共彻底丧生了信心，我知道小康社会只是迷魂汤，像我这样真正劳动的人一辈子也不够温饱，我声明退出中国共产党、共.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年03月04日 11:46 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/6/n11027061.md#1" target="_blank">每日三退声明精选（2019/02/05）</a><br></h3>共产邪党给我善良、勤劳的家族和亲人进行过长期残酷的迫害，也给中国民族造成重大破坏和无穷的灾难。作为一名学生，我被迫参加过邪党共青团、少先队组织，邪党还不允许退出，否则就是迫害！现在我在大纪元郑重宣布退出邪恶的共青团和少先队组织，永不加入邪党组织！斩断邪党对我的各种安排和迫害！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月06日 11:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/5/n11025261.md#1" target="_blank">每日三退声明精选（2019/02/04）</a><br></h3>本人张云杰，我是一个历史学者，一生致力于复兴中华传统文化，努力将中国变成一个正德正善、自然良循的社会。然而，邪恶的中共“党文化”正在将中国文化糟蹋的面目全非。在阅读了《九评共产党》之后，我深刻地体会到了中共邪党的罪恶。现和父亲张笃银一起声明退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月05日 10:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/2/n11020479.md#1" target="_blank">每日三退声明精选（2019/02/02）</a><br></h3>中共极权的核心价值，就是为了一党之私、专制集团的利益，为了维护权力，不惜牺牲全民族的利益为代价，把十几亿中国民众不当人，破坏了传统文化和道德，变异了人性。现在中国社会已经走到尽头，天不灭中共，中国没有希望和未来。我声明退出中共邪党及其一切附属组织共青团、少先队等，远离邪恶，顺应天意，为自己的生命选择善良和美好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月02日 11:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/2/1/n11018525.md#1" target="_blank">每日三退声明精选（2019/02/01）</a><br></h3>一个只会禁锢思想的党派，就不会是一个得民心的统治者，从小所受的洗脑教育，让人蒙蔽了双眼，我了解了它的邪恶本质后，决心退党，以免在有生之年，对得起自己的灵魂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年02月02日 12:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/nf3046_7.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/nf3046_7.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/nf3046_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_7.htm">http://www.epochtimes.com/gb/nf3046_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
