--- a/gb/nf1176111_5.md
+++ b/gb/nf1176111_5.md
@@ -15,7 +15,7 @@
 以流行音乐为例，上海滩出了一位享誉海内外的歌仙，是40年代备受瞩目的作曲家，也是50年代中共冤判的55万“右派分子”中的一位受难者。他曾立志为辛劳民众写歌而改名“陈歌辛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年03月04日 5:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/3/2/n8866965.md#1" target="_blank">陈梦家——为传统汉字殒命的悲壮文人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/3/2/n8866965.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/Chen_Mengjia-150x120.jpg" align ="left"></a>这是一位与汉字有着不解之缘的乱世才子。曾经的他浪漫潇洒，以笔墨作针线、汉字作珠玉，串连成含蓄优美的“新月派”诗歌；后来的他严谨治学，钻进浩如烟海的古籍世界，探寻枯涩艰深的古文字之谜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年03月03日 6:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/2/28/n8858688.md#1" target="_blank">郝忠良：给《白毛女》伴奏一辈子才知受骗</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/2/28/n8858688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301140303532320-150x120.jpg" align ="left"></a>据保守估计，中共的土改杀死了200多万“地主”，而其子孙后代也连遭打压迫害。《白毛女》成为中共利用文艺宣传巩固暴力统治的典型。近日，一位唱了一辈子《白毛女》的女演员，一位为《白毛女》伴奏一辈子的演奏家，分别向记者讲述了自己六十年来的亲身经历和感受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年03月02日 6:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/2/20/n8831493.md#1" target="_blank">梁思成林徽因 才子佳人与中国古建筑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/2/20/n8831493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/f6c05e894d9841f4b82120e9616757ad-150x120.jpg" align ="left"></a>提到林徽因，人们最先想到的，或许是才貌双全的民国奇女子，荡气回肠的情感经历，“人间四月天”般的清新诗文。而说起梁思成，人们或许会说，他是晚清名士梁启超的儿子，才女林徽因的丈夫，学贯中西的建筑学家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年02月24日 2:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/4/22/n9063895.md#1" target="_blank">林辉：文革刘宝瑞尸骨无存 侯宝林屡被批斗</a><br></h3>1966年文革爆发后，相声界的名角们也难逃被迫害的命运，这其中比较有名气的如“单口相声大王”刘宝瑞、对口相声大师侯宝林等。前者著名的段子《连升三级》、《珍珠翡翠白玉汤》，对喜爱相声的人来说是耳熟能详；后者的《醉酒》也是广为人知。有人认为，在艺术性上，刘宝瑞要高于侯宝林。然而，就是这样一位大师，却在文革黑暗的岁月中被迫害致死，而且尸骨无存。至于侯宝林则被打成“.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月23日 10:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/4/18/n9048665.md#1" target="_blank">林辉：下关惨案与李、闻之死背后的鬼影</a><br></h3>在中共夺取政权后，中共继续颠倒黑白，让蒋介石“背黑锅”至今未休。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月18日 11:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/4/10/n9022279.md#1" target="_blank">丁抒：胡风案——空前的文字狱</a><br></h3>在文章最后，胡风总结道：在这个顽强的宗派主义地盘上面……在读者和作家头上就被放下了五把“理论”刀子：作家要从事创作实践，非得首先具有完美无缺的共产主义世界观不可……单单这一条就足够把一切作家都吓哑了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月11日 1:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/4/10/n9022484.md#1" target="_blank">林辉：民国最高院检察长与大法官凄惨的结局</a><br></h3>民国时期的法学家不仅从小接受儒家教育，而且大多具有海外留学背景，亦接受了西方宪政思想。他们与其他接受西方思想的中国人一样，希望仿效西方，推动中国法治建设。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年04月10日 5:01 PM							</td></tr>
