--- a/gb/nf5562.md
+++ b/gb/nf5562.md
@@ -23,10 +23,10 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/1/23/n4349946.md#1" target="_blank">【历史今日】14年前天安门自焚世纪伪案 主犯遭报</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/1/23/n4349946.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/1409201148251944-150x120.jpg" align ="left"></a>14年前的今天，2001年1月23日，中共在天安门炮制了一出自焚假戏，用来栽赃法轮功，随后在全国范围掀起了一场文革式的最大规模的政治迫害运动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年01月24日 4:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/1/15/n4342454.md#1" target="_blank">归宇斌：卖拐配合天安门伪火  赵本山穷途末路</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/1/15/n4342454.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/1501142137052499-150x120.jpg" align ="left"></a>2014年岁末，大陆媒体报导称赵本山处于四面楚歌之中。这不禁令笔者回想起赵本山2001年央视春晚小品《卖拐》，卖拐忽悠成功后赵本山被当时的江某某奖励为小品王，并封为之后十几年央视春晚“最受欢迎作品奖”得主。这儿，笔者据文献资料综述《卖拐》出台前后的时事背景和相关人物的遭遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2015年01月15日 3:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/7/10/n4197248.md#1" target="_blank">世纪伪案“天安门自焚”再发现新线索</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/7/10/n4197248.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1310281753432120.jpg" align ="left"></a>“天安门自焚伪案”发生至今已超过13个年头，自焚案有诸多疑点和破绽。近日，大陆一名加油站老板，再指出了5个新的疑点，他的言论令所有在场的人感到震惊!......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月10日 11:05 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/1/13/n4058097.md#1" target="_blank">【夏小强】陈光标带到纽约的第三个“烧伤女人”是谁？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/1/13/n4058097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401121253392583-150x120.jpg" align ="left"></a>陈光标在去美国前，高调声称要收购《纽约时报》，藉以吸引媒体注意，甚至在自己的官方微博上贴出了自己的登机牌，似乎唯恐天下记者不采访他。1月5日，当陈光标到达纽约肯尼迪机场的时候，仅有中国大陆“第一财经”的记者对他进行了采访。正是这篇发表在一财网上的题为“纽约肯尼迪机场直击陈光标”的新闻报导中的一个细节，却曝光了陈光标的惊人秘密。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月13日 3:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/6/30/n9341394.md#1" target="_blank">你不了解的“天安门自焚”骗局</a><br></h3>2001年1月23日，大年三十，天安门广场发生震惊世界的5人“自焚”案。中共喉舌媒体第一时间报导此案诬陷法轮功，但是漏洞百出。此案已被国际社会公认为是中共制造的一场世纪骗局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年07月01日 9:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/4/9/n7537465.md#1" target="_blank">镇楼之宝被中共拆除后 天安门异象频现</a><br></h3>近日大陆媒体披露，1970年，北京天安门城楼重建。据参加旧城楼拆除的人回忆，当时拆除旧城楼时发现一个辟邪物，古代称之为镇楼之宝。外界关注，天安门城楼镇楼之宝被拆除后，中共在天安门广场制造了诸多血腥罪恶，昭示中共走向末路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2016年04月10日 3:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/7/25/n4209216.md#1" target="_blank">立鉴：真假自焚</a><br></h3>中共特务陈光标被指使到美国炒作天安门自焚，这说明中共邪党血债帮在失去权力后为了搞乱局势已经进入了一种头脑不清醒的弱智状态。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年07月25日 3:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/1/13/n4058097.md#1" target="_blank">【夏小强】陈光标带到纽约的第三个“烧伤女人”是谁？</a><br></h3>陈光标在去美国前，高调声称要收购《纽约时报》，藉以吸引媒体注意，甚至在自己的官方微博上贴出了自己的登机牌，似乎唯恐天下记者不采访他。1月5日，当陈光标到达纽约肯尼迪机场的时候，仅有中国大陆“第一财经”的记者对他进行了采访。正是这篇发表在一财网上的题为“纽约肯尼迪机场直击陈光标”的新闻报导中的一个细节，却曝光了陈光标的惊人秘密。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月13日 3:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/1/11/n4056422.md#1" target="_blank">黄天辰：“中国精神病领袖”头衔归陈光标吗？</a><br></h3>大过年老天爷又送来开心果，陈游标那让“世界震撼”的名片及被网友册封的“中国的精神病领袖”，真是笑翻了，这比看司马南夹头还过瘾。可笑江派血债帮已到山穷水尽、黔驴技穷的地步，只能派出这么个人到纽约丢人现眼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月11日 11:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/14/1/11/n4056412.md#1" target="_blank">夏天官：陈光标想把江泽民血债帮推上黄泉路？</a><br></h3>陈光标在美国纽约所为的背时是因为根本不顾及两个发展大势：一是法轮功反迫害之大势已把法轮功被迫害的真相昭然于天下，其中“天安门自焚伪案”——但凡是能有人类正常的逻辑的人都能明了这是当时的江泽民集团所一手构陷、炮制的陷害法轮功的阴谋；二是中共现当局已经在根本上与江泽民政治集团在政治与权力上形成不可解的“敌对矛盾”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2014年01月11日 9:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nf5562_2.md#1">下一页</a></h3></td></tr>
