--- a/gb/nf4386_8.md
+++ b/gb/nf4386_8.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/24/n9665077.md#1" target="_blank">韩国规模最大仁孝传统文化节 法轮功获奖</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/24/n9665077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1-301-150x120.jpg" align ="left"></a>旨在承传“仁孝”之传统，韩国举办了史上规模最大的“正祖大王陵幸车”活动，参与其中的韩国法轮功团体颇受瞩目，并因表演杰出而获奖。众多韩国民众踊跃接受法轮功传单，对法轮功充满好奇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月27日 11:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/20/n9652405.md#1" target="_blank">美明州参议员致信上海市长：释放法轮功学员</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/20/n9652405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/14e62d3a8b0d520d_ttl7dayQ7L_1_4_-150x120.jpg" align ="left"></a>上海浦东新区青年法轮功学员丁俞国2017年7月26日被浦东警方绑架，被非法关押已经近2个月。应丁俞国在美国明尼苏达州的亲友请求，美国明尼苏达州三位参议员9月15日致信中共上海市委书记韩正与上海市长应勇，要求其关注该事件，立即释放丁俞国，并敦促其保护法轮功学员信仰自由的权利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月21日 1:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/8/n9612816.md#1" target="_blank">中共干扰加州参议院第10号决议案 外界谴责</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/8/n9612816.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/1709022118571749-600x400-1-150x120.jpg" align ="left"></a>加州参议院司法委员会近日全体无异议地通过了第10号联合决议案（SJR-10），谴责中共对法轮功的长期迫害。但中领馆很快针对此事进行干涉，给参议院写信威胁。此信被披露后，引发外界关注和谴责。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月09日 8:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/8/n9611180.md#1" target="_blank">比利时“和平路线” 法轮功学员孤儿受关注</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/8/n9611180.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/09/2017-9-8-minghui-falun-gong-belgium-01-ss-150x120.jpg" align ="left"></a>2017年9月2日和3日，在比利时东弗兰德省（Provincie Oost-Vlaanderen）圣尼古拉市（Sint-Niklaas）的亨德里克·海曼广场（het Hendrik Heymanplein），由市政府组织的“和平节（Vredefeesten）”活动上，法轮功学员及他们的孤儿受迫害问题受民众关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月08日 8:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/10/31/n9790601.md#1" target="_blank">广州法轮功学员杨秋仁等案开庭 律师要求放人</a><br></h3>10月30日，广州市天河区法院对法轮功学员杨秋仁和杨金花非法开庭。律师当庭要求将二人无罪释放。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年11月01日 11:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/10/6/n9708224.md#1" target="_blank">大陆民众对李洪志师父的感恩与期盼</a><br></h3>在中秋月圆的日子里，我眼含热泪浏览了明慧网上中国大陆明白真相的世人给李洪志师父发来的贺词，感恩与期盼溢于言表，真是真情显民心，大法救世人啊！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年10月07日 3:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/20/n9652172.md#1" target="_blank">密西根州特洛伊市长赞扬法轮功</a><br></h3>“我感到很舒心。这套打坐冥想功法能量强大，让人感到平静。”美国密西根州特洛伊市（Troy City）市长Dane Slater先生在观看了法轮功学员的十五分钟功法展示后说。“这种平静的感觉让我感觉很好。今天，就在此时我感觉真好。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月21日 2:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/9/19/n9648201.md#1" target="_blank">新学期伊始 法国学生了解法轮功</a><br></h3>2017年9月2日和9日，法国南部法轮功学员在南特市（Nantes）中心的商业广场开展介绍法轮功的活动。时值开学期间，成群结队的青年学生路过法轮功学员的活动地点，他们对发生在中国的事很感兴趣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2017年09月20日 7:10 AM							</td></tr>
